# loom-code

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bootstrap-project.sh  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
assets/: claude-md-snippet.md  identity.md.template  statusline.sh
assets/agents/: code-reviewer.md  doc-writer.md  git-helper.md
assets/directives/: permanent.md  system.md
assets/skills/loom/: SKILL.md
assets/skills/loom-resume/: SKILL.md
assets/skills/loom-status/: SKILL.md
assets/skills/reflect/: SKILL.md
assets/skills/wrap/: SKILL.md
loom_mcp/: __init__.py  __main__.py  close_orphan.py  config.py  embeddings.py  file_sync.py  init_db.py  memory.py  models.py  reflection.py  server.py
scripts/: approve.py  claude-wrapper.sh  config.py  pre-compact-snapshot.py  pre-compact-snapshot.sh  quality-check.sh  reflect.py  secrets-check.sh  session-guard.sh  session-timeout-check.sh  stats.py  subagent-stop-capture.py  subagent-stop-capture.sh
tests/: test_embeddings.py  test_file_sync.py  test_memory.py  test_reflection.py  test_server_helpers.py
